--- a/Слывка/Задание 2/index.html
+++ b/Слывка/Задание 2/index.html
@@ -42,10 +42,7 @@
                     <h1 class="intro_title">
                         Your awesome traffic permit consultant.
                     </h1>
-                    <div class="intro_btn">
-                        <img src="../Задание 2/img/svg/arrow.svg">
-                         <p>GET STARTED</p> 
-                    </div>
+                    <a href="#!" class="intro_btn"> <img src="../Задание 2/img/svg/arrow.svg">GET STARTED</a>
                         <div class="about_us">
                             <span class="heading_about_us">ABOUT US</span>
                                 <p class="heading_text">The occupational traffic permit is one of the most important things in the company when carrying out freight transport. In fact, it is a prerequisite for doing business traffic at all.</p>
@@ -70,13 +67,13 @@
             </div>
 
             <div class="questions_1">
-                <button class="btn_question" onclick="myFunction()"> What is a professional traffic permit? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> What is a professional traffic permit? </button>
                     <div 
-                        id="answer">Traffic permits are a requirement for conducting professional traffic. 
+                        id="answer_1">Traffic permits are a requirement for conducting professional traffic. 
                     </div> 
                         <script>
                             function myFunction() {
-                                var x = document.getElementById("answer");
+                                var x = document.getElementById("answer_1");
                                     if (x.style.display === "none") {
                                         x.style.display = "block";
                                     } else {
@@ -84,18 +81,18 @@
                                     }
                                 }
                         </script>
-                <button class="btn_question" onclick="myFunction()"> How to check the traffic condition? </button> 
-                <button class="btn_question" onclick="myFunction()"> What are the requirements for a professional traffic permit? </button>
-                <button class="btn_question" onclick="myFunction()"> Are there professional traffic permit training courses at a distance? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> How to check the traffic condition? </button> 
+                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> What are the requirements for a professional<br>traffic permit? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> Are there professional traffic permit training<br>courses at a distance? </button>
             </div>
             <div class="questions_2">
                 <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> When is a professional traffic permit needed?</button>
                 <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> Where to look for a traffic permit? </button>
-                <button class="btn_question" onclick="myFunction()"> Are there differences between a traffic permit and a professional traffic permit? </button>
-                <button class="btn_question" onclick="myFunction()"> How much does a commercial traffic permit cost for goods? </button>
-                <button class="btn_question" onclick="myFunction()"> How to plug in for the traffic permit test? </button>
-                <button class="btn_question" onclick="myFunction()"> How is the sample for a professional traffic permit booked? </button>
-                <a class="load_more" onclick="myFunction()">LOAD MORE</a>
+                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> Are there differences between a traffic permit<br>and a professional traffic permit? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> How much does a commercial traffic permit<br>cost for goods? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> How to plug in for the traffic permit test? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> How is the sample for a professional traffic<br>permit booked? </button>
+                <a href="#!" class="load_more"> LOAD MORE<img class="img_load_more" src="/Задание 2/img/svg/plus.svg"></a>
             </div>
             <!-- <div class="about_us_feedback"> 
                 <span class="heading">ABOUT US</span>
