--- a/щегельски/index.html
+++ b/щегельски/index.html
@@ -18,15 +18,20 @@
         <div class="user_menu">
             <a class="btn6"> GET STARTED </a>
             <a class="btn7"> LOG IN </a>
+            <img src="img/logo.png">
         </div>
-        img src="img/logo.png"
+    
         <div class="page1">
             <h1>Build exactly the eCommerce website you want</h1>
             <h2>WooCommerce is a customizable, open-source eCommerce platform built on WordPress. Get started quickly and make your way.</h2>
             <button class="btn_8">START A NEW STORE</button>
             <a  href="#"> <img class="btn9"> </a>
             <div class="img1">
-                <img src="картинки">
+                <img src="img/123.png">
+                <img src="img/234.png">
+                <img src="img/345.png">
+                <img src="img/567.png">
+                <img src="img/789.png">
             </div>
                 
         </div>
@@ -42,7 +47,19 @@
             <button class="btn_9">ECOMMERCE FOR WORDPRESS ></button>  
         </div>
         <div class="img3">
-            <img src="картинка"> 
+            <img src="img/a1.png">
+            <img src="img/a2.png">
+            <img src="img/a3.png">
+            <img src="img/a4.png">
+            <img src="img/a5.png">
+            <img src="img/a6.png">
+            <img src="img/a7.png">
+            <img src="img/a8.png">
+            <img src="img/a9.png">
+            <img src="img/a10.png">
+            <img src="img/a11.png">
+            <img src="img/a12.png">
+
         </div>    
         <div class="page3">
              <h2>Customize and Extend</h1>
@@ -50,7 +67,7 @@
              <button class="btn_10">BROWSE EXTENSIONS ></button>  
         </div>
         <div class="comments">
-            <img src="img/fksjhefhs.png">
+            <img src="img/otzivi.png">
         </div>
         <div class="page4"> 
             <h2>Develop Without Limits</h2>
@@ -58,7 +75,7 @@
             <button class="btn_10">ECOMMERCE FOR WORDPRESS ></button>
         </div>
         <div class="img4">
-            <img src="картинка"> 
+            <img src="img/guide.png"> 
         </div>
         <div class="page5"> 
             <h2>Customize and Extend</h2>
@@ -66,12 +83,12 @@
             <button class="btn_11">JOIN A MEETUP ></button>
         </div>
         <div class="img5">
-            <img src="картинка"> 
+            <img src="img/av.png"> 
         </div>
         <div>
             <h2> Supported by real people</h2>
             <h3>Our team of Happiness Engineers works remotely from 58 countres providing customer support across multiple time zones.</h3>
-            <img src="картинка">
+            <img src="img/lyudi.png">
             <h3> WooCommerce - the most customizable eCommerce platform for building your online business.</h3>
             <button class="btn_12">GET STARTED</button>
         </div>
@@ -80,11 +97,11 @@
     <div class="footer">
         <div class="preimyshestva">
             <p>30 days money back guarantee</p>
-            <img class="img6" src="картинка">
+            <img class="img6" src="img/galka.png">
             <p>Support teams across the world</p>
-            <img class="img7" src="картинка">
+            <img class="img7" src="img/fishka.png">
             <p>Safe & Secure online payment</p>
-            <img class="img8" src="картинка">
+            <img class="img8" src="img/zamok.png">
         </div>
         <div class="other"> 
             <h5 class="fsefre">WHO WE ARE</h5>
@@ -115,16 +132,16 @@
                 <a class="btn34" href="#"> Success Stories </a>
                 <a class="btn35" href="#"> Design Feedback Group </a>
             <div class="social_icon">
-                <a  href="#"> <img class="twitter" src="картинка мал"> </a>
-                <a  href="#"> <img class="facebook" src="картинка мал"> </a>
-                <a  href="#"> <img class="instagram" src="картинка мал"> </a>
-                <a  href="#"> <img class="wi-fi" src="картинка мал"> </a>
+                <a  href="#"> <img class="twitter" src="img/twitter.png"> </a>
+                <a  href="#"> <img class="facebook" src="img/f.png"> </a>
+                <a  href="#"> <img class="instagram" src="img/inst.png"> </a>
+                <a  href="#"> <img class="wi-fi" src="img/wifi.png"> </a>
             </div>
             <div class="information"> 
                 <p>COPYRIGHT WOOCOMMERCE 2020 TERMS & CONDITIONS  PRIVACY POLICY </p>
             </div>
             <div>
-                <img class="img9" src="картинка логотипа">
+                <img class="img9" src="img/auto.png">
             </div>
         </div>
     </div>
