--- a/Слывка/Задание 2/index.html
+++ b/Слывка/Задание 2/index.html
@@ -67,22 +67,22 @@
             </div>
 
             <div class="questions_1">
-                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> What is a professional traffic permit? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="../Задание 2/img/svg/plus.svg"> What is a professional traffic permit? </button>
                     <div 
                         id="answer_1">Traffic permits are a requirement for conducting<br>professional traffic. 
                     </div> 
-                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> How to check the traffic condition? </button> 
-                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> What are the requirements for a professional<br>traffic permit? </button>
-                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> Are there professional traffic permit training<br>courses at a distance? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="../Задание 2/img/svg/plus.svg"> How to check the traffic condition? </button> 
+                <button class="btn_question" onclick="myFunction()"> <img src="../Задание 2/img/svg/plus.svg"> What are the requirements for a professional<br>traffic permit? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="../Задание 2/img/svg/plus.svg"> Are there professional traffic permit training<br>courses at a distance? </button>
             </div>
             <div class="questions_2">
-                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> When is a professional traffic permit needed?</button>
-                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> Where to look for a traffic permit? </button>
-                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> Are there differences between a traffic permit<br>and a professional traffic permit? </button>
-                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> How much does a commercial traffic permit<br>cost for goods? </button>
-                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> How to plug in for the traffic permit test? </button>
-                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> How is the sample for a professional traffic<br>permit booked? </button>
-                <a href="#!" class="load_more"> LOAD MORE<img class="img_load_more" src="/Задание 2/img/svg/plus.svg"></a>
+                <button class="btn_question" onclick="myFunction()"> <img src="../Задание 2/img/svg/plus.svg"> When is a professional traffic permit needed?</button>
+                <button class="btn_question" onclick="myFunction()"> <img src="../Задание 2/img/svg/plus.svg"> Where to look for a traffic permit? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="../Задание 2/img/svg/plus.svg"> Are there differences between a traffic permit<br>and a professional traffic permit? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="../Задание 2/img/svg/plus.svg"> How much does a commercial traffic permit<br>cost for goods? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="../Задание 2/img/svg/plus.svg"> How to plug in for the traffic permit test? </button>
+                <button class="btn_question" onclick="myFunction()"> <img src="../Задание 2/img/svg/plus.svg"> How is the sample for a professional traffic<br>permit booked? </button>
+                <a href="#!" class="load_more"> LOAD MORE<img class="img_load_more" src="../Задание 2/img/svg/plus.svg"></a>
             </div>
             <div class="about_us_feedback"> 
                 <span class="heading_about_us">ABOUT US</span>
