--- a/Слывка/Задание 2/index.html
+++ b/Слывка/Задание 2/index.html
@@ -85,56 +85,88 @@
                 <a href="#!" class="load_more"> LOAD MORE<img class="img_load_more" src="../Задание 2/img/svg/plus.svg"></a>
             </div>
             <div class="about_us_feedback"> 
-                <span class="heading_about_us">ABOUT US</span>
+                 <span class="heading_about_us">ABOUT US</span>
                 <h2 class="about_us_feedback_text">Out Awesome Clients</h2>
                 <a class="navigation_buttons">
                     <img class="navigation_buttons_left" src="./img/svg/navigation_left.svg" alt="navigation_left">
                     <img class="navigation_buttons_right" src="./img/svg/navigation_right.svg" alt="navigation_right">
                 </a>
+
+                <div class="feedbacks">
                     <div class="feedback_1"> 
-                        <p>Yes, you will need to have the land owner <br> sign the permit application as the Permittee, <br> and you sign the permit as the Applicant or <br> Agent for the Permittee.</p>
-                        <img src="#" alt="avatar" style="width:30px">
-                        <spanc class="user.name">Isak Pettersson</span>
+                        <p class="feedback_text_1">Yes, you will need to have the land owner sign the permit application as the Permittee, and you sign the permit as the Applicant or Agent for the Permittee.</p>
+                        <div class="user_name">
+                            <img src="./img/svg/avatar_1.svg" alt="avatar" style="width:60px">
+                            <span>Isak Pettersson</span> 
+                        </div>
                     </div>
                     <div class="feedback_2">
-                        <p>From most barricade or traffic control <br> companies located in the phone book. They <br> employ certified Traffic Control Supervisors <br> (TCS) who can generate and certify the traffic control plan.</p>
-                        <img src="#" alt="avatar" style="width:30px">
-                        <spanc class="user.name">Simon Sandberg</span>
-                    </div>
+                        <p class="feedback_text_2">From most barricade or traffic control companies located in the phone book. They employ certified Traffic Control Supervisors (TCS) who can generate and certify the traffic control plan.</p>
+                        <div class="user_name">
+                            <img src="./img/svg/avatar_2.svg" alt="avatar" style="width:60px">
+                            <span>Simon Sandberg</span>
+                        </div>
+                    </div> 
                     <div class="feedback_3"> 
-                        <p>An A-Line, or access restriction deed is a <br> property right that has been obtained by <br> CDOT for the sole purpose of prohibiting <br> direct</p>
-                        <img src="#" alt="avatar" style="width:30px">
-                        <spanc class="user.name">Name Surname</span>
+                        <p class="feedback_text_3">An A-Line, or access restriction deed is a property right that has been obtained by CDOT for the sole purpose of prohibiting direct</p>
+                        <div class="user_name">
+                            <img src="./img/svg/avatar_3.svg" alt="avatar" style="width:60px">
+                        <span>Name Surname</span>
+                        </div>
+                        
                     </div>
+                </div>
             </div> 
 
             
         </div>
-        <!-- <div class="footer">
-            <form class="start_order">
-                <label for="name"><b>Name<br></b></label>
-                <input type="text" placeholder="Your name" name="name">
+        <div class="footer">
+            <div class="start_order">
+                <form>
+                    <div class="form_group">
+                        <input type="text" placeholder="Your name" class="form_input">
+                        <label for="Name" class="form_label">Name</label>
+                    </div>
+                    <div class="form_group">
+                        <input type="text" placeholder="Your email address" class="form_input">
+                        <label for="Email" class="form_label">Email address</label>
+                    </div>
+                    <a href="#!" class="get_started_form" ><img src="../Задание 2/img/svg/arrow.svg">GET STARTED</a>
+                </form>
+            </div>
 
-                <label for="email"><b><br>Email<br></b></label>
-                <input type="text" placeholder="Your email address" name="email">
-                <a class="btn_start"><br> GET STARTED</a>
-            </form>
             <div class="footer_comment">
-                <p>We provide traffic management consultants so you get started quickly, contact us for a quote today!</p>
+                <img src="./img/footer_comment.png" alt="bg_question">
+                <p class="footer_comment_text">We provide traffic management consultants so you get started quickly, contact us for a quote today!</p>
             </div>
-            <div class="footer_contact_menu">
-                <a class="footer_logo">Trafico</a>
-                <a class="about">ABOUT</a>
-                <a class="how to">HOW TO</a>
-                <a class="faqs">FAQS</a>
-            </div>
-                <p>Copyright @ 2019</p>
-                    <div class="social_icons">
-                        <a class="facebook">facebook</a>
-                        <a class="twitter">twitter</a>
-                        <a class="intagram">instagram</a
-                    </div> -->
 
+            <nav class="footer_nav">
+                <ul class="header_list">
+                    <li class="footer_item">
+                        <a href="#!" class="header_link">ABOUT</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#!" class="header_link">HOW TO</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#!" class="header_link">FAQS</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="footer_logo">
+                <a href="/">
+                    <img src="./img/svg/footer_logo.svg" alt="footer_logo">
+                </a>
+            </div>
+
+            <p class="copyright">Copyright @ 2019</p>
+
+            <div class="social_icons">
+                <a href="#!" class="facebook"><img src="./img/svg/facebook.svg" alt="facebook"></a>
+                <a href="#!" class="twitter"><img src="./img/svg/twitter.svg" alt="twitter"></a>
+                <a href="#!" class="intagram"><img src="./img/svg/instagram.svg" alt="instagram"></a>
+            </div> 
         </div>
     </div> 
     <script src="./js/index.js"></script>
