--- a/Абдикеримова/Задание 2/index.html
+++ b/Абдикеримова/Задание 2/index.html
@@ -1,39 +1,137 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>🐘 Elephants</title>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="./css/style.css">
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap-reboot.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <title>Document</title>
 </head>
+
 <body>
-	<h1>🐘 Elephants</h1>
-	<h2>Where do they live?</h2>
-	<img id="map" src="./img/map.jpg">
-	<p>Elephants are the largest land animals on earth. They live in South-East Asia and Africa in tropical forests and savannas. There is a fat pad in the center of the elephant's foot, which "flattens" every time the elephant lowers its foot, increasing the area of support.</p>
-	<h2>Types of elephants</h2>
-	<img src="./img/elphant2.jpg">
-	<p>Loxodonta africana</p>
-	<img src="./img/elphant1.jpg">
-	<p>Elephas maximus indicus</p>
-	<img src="./img/elphant3.jpg">
-	<p>Elephas maximus borneensis</p>
-	<img src="./img/elphant4.jpg">
-	<p>Elephas maximus</p>
-	<h2>Life expectancy of elephants</h2>
-	<img src="./img/elder.jpg"/>
-	<p>The average life span of an elephant in nature is about 70 years.
-	In captivity, with proper care and feeding, elephants can live up to 75-80 years.</p>
-	<h2>Interesting facts about elephants!</h2>
-	<p>1. Elephants are the closest relatives of extinct mammoths.<br>
-2. Contrary to popular myth, elephants are not afraid of mice (see interesting facts about mice).<br>
-3. Elephants have a surprisingly good memory. There are cases when elephants took revenge on offenders after many years. However, good elephants also do not forget.<br>
-4. It is a well — known fact that elephants are the largest land animals on earth.<br>
-5. The heart of an elephant can reach a weight of 25-30 kg. In a normal rhythm, it contracts about once every two seconds, driving blood through the huge body.<br>
-6. In the wild, elephants spend up to 20 hours a day searching for food.<br>
-7. An adult elephant drinks 100-200 liters of water a day, or even more.<br>
-8. Elephants live an average of half a century. The most famous centenarian is an elephant named Lin Wang, who lived in this world for 86 years.<br>
-9. An elephant's trunk can hold up to eight liters of water.<br>
-10. Elephants have an extremely sharp sense of smell, much sharper than humans.</p>
+    <div class="header">
+        <div class="logo_header">
+            <img src="/img/projeco-logo.svg" alt="" class="logotip">
+        </div>
+
+        <div class="header_text">
+            <span class="text"><h1>PARTNER WITH KONSTUCT</h1></span>
+            <span class="after_text">An award-winning construction management firm</span>
+        </div>
+        <div class="down_text">
+            <a href="#1">SCROLL DOWN</a>
+        </div>
+    </div>
+
+    <div class="menu" id=1>
+        <div class="navbar_items">
+            <a href="#">HOME</a>
+            <a href="#2">ABOUT</a>
+            <a href="#3">SERVICES</a>
+            <a href="#4">WORK</a>
+            <a href="#5">CONTACT</a>
+        </div>
+        <a href="#"><img src="./img/projeco-logo-black.svg" alt=""></a>
+    </div>
+
+    <div id=2 class="about_container">
+        <span class="about_title">OUR STORY</span>
+        <div class="line"></div>
+        <div class="about_content">
+            <div class="text_about_block">
+                <p class="about_text1">Founded in 2011 by John Mathew Smith, <span class="blue_text"> Konstruct</span> has become the number one construction management firm</p>
+                <br>
+                <p class="about_text2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+                    laoreet dolore magna aliquam erat.</p>
+            </div>
+            <div class="img_about">
+                <img src="img/plan.png" alt="" class="picture_about">
+                <img src="img/manage.png" alt="" class="picture_about">
+                <img src="img/deliver.jpg" alt="" class="picture_about">
+            </div>
+        </div>
+
+    </div>
+
+    <div id=3 class="container_services">
+        <div class="tittle_content">
+            <span class="services_title">OUR CAPABILITIES</span>
+            <p class="services_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam </p>
+            <button class="service-btn">ALL SERVICE</button>
+        </div>
+        <div class="service_content">
+            <div class="service">
+                <img src="/img/Bitmap (3).png" alt="" class="service_img">
+                <p class="services_text2">PROJECT AND CONSTRUCTION <br> MANAGEMENT</p>
+                <p class="text-service">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
+            </div>
+            <div class="service">
+                <img src="/img/Bitmap (1).png" alt="" class="service_img">
+                <p class="services_text2">STRUCTURE AUDIT AND <br> MAINTENANCE</p>
+                <p class="text-service">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
+            </div>
+            <div class="service">
+                <img src="/img/Bitmap (2).png" alt="" class="service_img">
+                <p class="services_text2">FACTORY CONSTRUCTION <br> AND MODELING</p>
+                <p class="text-service">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
+            </div>
+        </div>
+    </div>
+    <div class="get-in-touch">
+        <div class="get-in-touch__container">
+            <h1 class="get-in-touch__tittle">Want to build <br> something amazing?</h1>
+            <button class="get-in-touch__button">GET IN TOUCH</button>
+        </div>
+    </div>
+    <div class="newsletter">
+        <div class="newsletter__container">
+            <p class="newsletter__text">Newsletter Signup</p>
+            <form>
+                <input type="text" name="email" placeholder="test@youremail.com">
+                <input class="insubmit" type="submit" value="SIGNUP">
+            </form>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer__container">
+            <div class="footer__company">
+                <h1>COMPANY</h1>
+                <a href="#"><img src="./img/projeco-logo.svg" alt=""></a>
+                <h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</h2>
+            </div>
+            <div class="footer__links">
+                <h1>LINKS</h1>
+                <a href="" class="links">HOME</a>
+                <a href="" class="links">ABOUT</a>
+                <a href="" class="links">SERVICES</a>
+                <a href="" class="links">PROJECT</a>
+                <a href="" class="links">CONTACT US</a>
+            </div>
+            <div class="footer__faq">
+                <a href="">FAQ</a>
+                <a href="">TERMS</a>
+                <a href="">CAREERS</a>
+            </div>
+            <div class="footer__blog">
+                <a href="">BLOG</a>
+                <a href="">PARTNERS</a>
+                <a href="">NEWS</a>
+            </div>
+            <div class="footer__contactus">
+                <h1>CONTACT US</h1>
+                <h2>213 Baker StreetOriel City Kounty7000 KNW,Kountry Name</h2>
+                <h2>+23 994 233 4022</h2>
+                <h2>info@konstruct.com</h2>
+            </div>
+            <div class="footer__social">
+                <img src="/img/socials.png" alt="">
+            </div>
+        </div>
+
+    </div>
 </body>
+
 </html>
